# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-12-03 19:27:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-90

    Summary:
      cms, removing obsolete i18n code
    Revision:
      itools--main--0.12--patch-90


    modified files:
     Changelog cms/Folder.py cms/LocaleAware.py cms/Metadata.py
     cms/Root.py cms/workflow.py


2005-12-03 18:50:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-89

    Summary:
      cms, fix rename (#150)
    Revision:
      itools--main--0.12--patch-89


    modified files:
     Changelog cms/Folder.py cms/ui/Folder_rename.xml.en


2005-12-02 15:20:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-88

    Summary:
      cms, remove broken debug code
    Revision:
      itools--main--0.12--patch-88


    removed files:
     cms/.arch-ids/debug.py.id cms/debug.py
     cms/ui/.arch-ids/Folder_manage_content.xml.en.id
     cms/ui/.arch-ids/Text_manage_content.xml.en.id
     cms/ui/Folder_manage_content.xml.en
     cms/ui/Text_manage_content.xml.en

    modified files:
     Changelog cms/Folder.py cms/Metadata.py


2005-12-02 14:53:05 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-87

    Summary:
      merge skin improvements from herve
    Revision:
      itools--main--0.12--patch-87

    Patches applied:
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-138
       clarify the versioning module prior to fixing #48.
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-140
       the layout is generic and meant to be reusable, that's why I split it from my design.
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-141
       fix browse_list, we really need two forms, with different needs and behaviours (#205).
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-143
       don't force Info16.png with the message background, it's not the same use.
    